# dsn-chatbot

./: .env.example  .gitignore  README.md  docker-compose.dev.yml  docker-compose.yml
.devcontainer/: .features.temp.dockerfile  Dockerfile  devcontainer.json  docker-compose.yml  post-create.sh  post-start.sh
backend/: .env.example  Dockerfile  Makefile  pyproject.toml  requirements.txt
backend/app/: config.py  database.py  main.py
backend/app/games/: depressed_robot.py  lazy_robot.py  password_lock.py  registry.py  sad_robot.py
backend/app/llm/: base.py  factory.py  openai_provider.py
backend/app/models/: conversation.py  message.py  user.py
backend/app/routers/: auth.py  chat.py  games.py
backend/app/schemas/: auth.py  chat.py  user.py
backend/app/services/: auth_service.py  chat_service.py
backend/tests/: test_health.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.vue  main.ts
frontend/src/components/: AnimatedRobotPreview.vue  ChatInput.vue  ChatMessage.vue  LanguageSwitcher.vue  LockDisplay.vue  MessageList.vue  ModelSelector.vue  RobotDisplay.vue
frontend/src/composables/: useTypewriter.ts
frontend/src/i18n/: index.ts
frontend/src/i18n/locales/: de.ts  en.ts
frontend/src/router/: index.ts
frontend/src/services/: api.ts  auth.ts  chat.ts  games.ts  robotAnimation.ts  robotSprites.ts
frontend/src/stores/: auth.ts  chat.ts  game.ts  language.ts  model.ts
frontend/src/types/: index.ts
frontend/src/views/: ChatView.vue  GameChatView.vue  GameSelectionView.vue  HallOfFameView.vue  LoginView.vue  RegisterView.vue
nginx/: nginx.conf
nginx/conf.d/: default.conf  ssl.conf.template
